# transxchange-parser

./: LICENSE  README.md  pyproject.toml  test_date_ranges.py  tox.ini
.github/workflows/: main.yml
tests/: test_date_ranges.py  test_parser.py
transxchange_parser/: txc.py
txc/: __init__.py  txc.py
